--- a/luci-theme-neobird/luasrc/view/themes/neobird/header.htm
+++ b/luci-theme-neobird/luasrc/view/themes/neobird/header.htm
@@ -152,14 +152,6 @@
 
 <header>
 
-<div class="navbar">
-  <a href="/cgi-bin/luci/admin/status/overview"><img src="<%=media%>/images/home.png" /></a>
-  <a href="/cgi-bin/luci/admin/services/shadowsocksr"><img src="<%=media%>/images/ssr.png" /></a>
-  <a href="/cgi-bin/luci/admin/network/network"><img src="<%=media%>/images/link.png" /></a>
-  <a href="/cgi-bin/luci/admin/status/realtime"><img src="<%=media%>/images/rank.png" /></a>
-  <a href="/cgi-bin/luci/admin/system/admin"><img src="<%=media%>/images/user.png" /></a>
-</div>
-
 <div class="container">
 <span class="showSide"></span>
 		<img  src="<%=media%>/images/logo.png" <%=striptags( (boardinfo.hostname or "?") ) %>>
@@ -181,7 +173,7 @@
 			<a class="label notice" href="<%=url(category, 'uci/changes')%>?redir=<%=http.urlencode(http.formvalue('redir') or table.concat(disp.context.request, "/"))%>"><%=translate('Unsaved Changes')%>: <%=ucichanges%></a>
 			<% end %>
 			<span id="xhr_poll_status" style="display:none" onclick="XHR.running() ? XHR.halt() : XHR.run()">
-				<span class="label success" id="xhr_poll_status_on"><span id="refresh_on" class="mobile-hide"></span></span>
+				<span class="label success" id="xhr_poll_status_on"><span id="refresh_on" class="mobile-hide"></span>
 				<span class="label" id="xhr_poll_status_off" style="display:none"><span id="refresh_off" class="mobile-hide"></span></span>
 			</span>
 		<% end %>
