--- a/luci-theme-design/htdocs/luci-static/design/css/style.css
+++ b/luci-theme-design/htdocs/luci-static/design/css/style.css
@@ -348,10 +348,10 @@ svg {
 
 /* fix p#aliyundrive-webdav_status b */
 
-p#aliyundrive-webdav_status b {
+/* p#aliyundrive-webdav_status b {
     color: #ff6666 !important;
     text-transform:capitalize;
-}
+} */
 
 /* fix .cbi-section .cbi-section */
 
@@ -362,7 +362,8 @@ p#aliyundrive-webdav_status b {
 /* fix node-services-vssr */
 
 .node-services-vssr .status-bar {
-	bottom: 50px;
+    bottom:calc(50px + constant(safe-area-inset-bottom));
+    bottom:calc(50px + env(safe-area-inset-bottom));
     /* display: none; */
 }
 
@@ -2968,3 +2969,17 @@ body.lang_pl.node-main-login .cbi-value-title {
 .commandbox div {
     position: unset !important;
 }    
+
+/* fix luci-app-netspeedtest */
+#cbi-netspeedtest-homebox- {
+    display: unset !important;
+}
+
+/* fix luci-app-nl */
+#detail-bubble.in {
+    color: #000;
+    padding-bottom: 60px;
+}
+
+/* fix luci-openclash */
+/* <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover"> */
